<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_name_field"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="@string/first_name"
                android:gravity="start"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/last_name_field"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="@string/last_name"
                android:gravity="start"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/gender_male"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/gender_female"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_button_not_specified"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/gender_other"
                android:textSize="18sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password_confirmation_field"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="@string/confirm_password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/date_of_birth_chooser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/date_of_birth"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/register"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_a_member"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sign_in_clickable_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

    </LinearLayout>

    <include
        android:id="@+id/progress_screen"
        layout="@layout/progress_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>