<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/opening_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/application_name"
        android:textAlignment="center"
        android:textColor="@color/colorRed_900"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout

        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_gray"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <View

                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/bright_green"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:paddingTop="0dp"
                android:paddingBottom="5dp"
                android:text="@string/login"
                android:textColor="@color/bright_green"
                android:textSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/bright_green" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_settings"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_email"
            android:paddingHorizontal="5dp"
            app:boxStrokeColor="#000000"
            app:endIconMode="clear_text"
            app:hintTextColor="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner_settings"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_password"
            android:paddingHorizontal="5dp"
            app:boxStrokeColor="#000000"
            app:endIconMode="password_toggle"
            app:hintTextColor="#000000"

            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"


                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forget_your_password"
            android:textColor="@android:color/black"
            android:textSize="15sp" />


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/rounded_corner_settings"
            android:backgroundTint="@color/bright_green"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"

            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"

            >


            <View

                android:layout_width="wrap_content"

                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/bright_green"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0"
                android:paddingTop="10dp"
                android:text="@string/or_login_with"
                android:textColor="@color/bright_green"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/bright_green" />
        </LinearLayout>


        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="258.5dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="12.5dp"
            android:paddingBottom="12.5dp"

            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="264dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/dark_blue" />


        <TextView
            android:id="@+id/do_not_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@color/bright_green"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/forget_your_password_layout"
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_bottom_corner"
        android:visibility="gone"


        >

        <TextView
            android:id="@+id/return_your_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/return_your_password_using_e_mail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"


            />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/return_your_text"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/forget_email_edittext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/enter_email"
            android:background="@color/grey"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/enter_email"
            android:textColor="@color/black" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forget_email_edittext"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@color/grey"
            android:text="@string/done"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"


            />

    </RelativeLayout>


    <include
        android:id="@+id/progress_screen"
        layout="@layout/progress_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>


